src/objects/Weekly_Time_Entry__c.object
<CustomObject>
    <description>This object is used to group all Time Entries on Weekly basis</description>
    <fields>
        <fullName>Aggregate_Billing_Amount__c</fullName>
        <label>Aggregate Billing Amount</label>
        <summarizedField>Time_Entry__c.Billed_Amount__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Weekly_Time_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aggregate_hours__c</fullName>
        <label>Aggregate hours</label>
        <summarizedField>Time_Entry__c.Total_Time_Spent__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Weekly_Time_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field is used to capture current Week&apos;s End Date</description>
        <inlineHelpText>Week&apos;s End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Time_Entries__c</fullName>
        <description>This field is used to calculate count of all Time Entries related to a Weekly Time Entry</description>
        <label>Number of Time Entries</label>
        <summaryForeignKey>Time_Entry__c.Weekly_Time_Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field is used to capture Current Week&apos;s Start Date</description>
        <inlineHelpText>Current Week&apos;s Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Weekly Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weekly Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeekLy Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>